[package]
name = "counts"
version = "1.0.0" # Keep in sync with `VERSION` in main.rs.
authors = ["Nicholas Nethercote <n.nethercote@gmail.com>"]
license = "Unlicense"
description = "A command line tool for ad hoc profiling."
readme = "README.md"
homepage = "https://github.com/nnethercote/counts"
repository = "https://github.com/nnethercote/counts"
keywords = ["cli", "profiling"]
categories = ["command-line-utilities", "development-tools::profiling"]
edition = "2021"

[dependencies]
regex-lite = "0.1"
fxhash = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

# These options make the binary a bit smaller.
[profile.release]
panic = "abort"
lto = true
