[package]
name = "counts"
version = "1.0.4" # Keep in sync with `VERSION` in main.rs.
authors = ["Nicholas Nethercote <n.nethercote@gmail.com>"]
license = "Unlicense"
description = "A command line tool for ad hoc profiling."
readme = "README.md"
repository = "https://github.com/nnethercote/counts"
keywords = ["cli", "profiling"]
categories = ["command-line-utilities", "development-tools::profiling"]
edition = "2024"
rust-version = "1.85"

[dependencies]
regex-lite = "0.1"
fxhash = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
# Disable various features, none of which we need, apparently.
predicates = { version = "3.0", default-features = false }
# Disable `getrandom` feature. File creation DoS attacks are not a risk for this crate's tests.
tempfile = { version = "3.0", default-features = false }

# These options make the binary a bit smaller.
# Data from v1.0.3, 2023-07-28:
# --------------------------------------
# config                 Linux    Mac
# --------------------------------------
# base                   4632976  773728    
#  + lto = true          2340584  676192
#  + panic = abort       2313104  639032
#  + strip = "debuginfo"  486936  536496 
# -> strip = "symbols"    486968  464816
# --------------------------------------
[profile.release]
lto = true
panic = "abort"
strip = "symbols"
